--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <div class="logo">Vivek Kumar</div>
+        <div class="logo">Javan Joar Singh</div>
         <nav>
             <a href="#shortener">Shortener</a>
             <a href="#about">About Me</a>
@@ -43,9 +43,9 @@
 
     <section id="about" class="about-section animate">
         <h2>About the Developer</h2>
-        <p>Hi! I'm <strong>Vivek Kumar</strong>, a passionate Computer Science Engineering student who loves turning ideas into working web apps.</p>
-        <p><strong>Email:</strong> <a href="mailto:vivekumar454@gmail.com">vivekumar454@gmail.com</a></p>
-        <p><strong>Phone:</strong> +91-8847302071</p>
+        <p>Hi! I'm <strong>Javan Joar Singh</strong>, a passionate Computer Science Engineering student who loves turning ideas into working web apps.</p>
+        <p><strong>Email:</strong> <a href="mailto:vivekumar454@gmail.com">sjavan@gmail.com</a></p>
+        <p><strong>Phone:</strong> +91-7814557589</p>
     </section>
 
     <section class="project-desc animate">
@@ -61,7 +61,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Vivek Kumar. All rights reserved.</p>
+        <p>&copy; 2025 Javan Joar Singh. All rights reserved.</p>
     </footer>
 
 </body>
