--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vivek's URL Shortener</title>
+    <title>Javan's URL Shortener</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script>
         function copyToClipboard() {
